# hit_mechanism_theory

./: README.md  package.xml
config/: rviz.rviz
four_links/: CMakeLists.txt  package.xml
four_links/config/: joint_names_four_links.SLDASM.yaml  joint_names_four_links.yaml
four_links/launch/: calculate_only.launch  display.launch  gazebo.launch  main.launch  publish_per_30_degree.launch
four_links/meshes/: linkAB.STL  linkBC.STL  linkCD.STL
four_links/scripts/: chart.py
four_links/src/: calculate_only.cpp  four_bar_mechanism.cpp  main.cpp  publish_per_30_degree.cpp
four_links/urdf/: four_links.csv  four_links.urdf
hit_mechanism_theory/: CMakeLists.txt  package.xml
hit_mechanism_theory/include/: four_bar_mechanism.h
hit_mechanism_theory/launch/: calculate_only.launch  gazebo.launch  publish_per_30_degree.launch
hit_mechanism_theory/meshes/: base_link.STL  linkAB.STL
launch/: main.launch
meshes/: linkBC.STL  linkCD.STL
src/: four_bar_mechanism.cpp  main.cpp
urdf/: four_links.csv  four_links.urdf
