<package format="2">
  <name>hit_mechanism_theory</name>
  <version>1.0.0</version>
  <description>
    hit_mechanism_theory
  </description>
  <author>FCAT</author>
  <maintainer email="3134275365@qq.com" />
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>